Corregido error del cambio de nombre de index

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -132,11 +132,11 @@
                     <a href="https://s1.1zoom.me/big3/434/Men_Fitness_running_456888.jpg"
                       target="blank"
                       class="card-link"
-                      style="text-decoration: none;">Imagen de /start
+                      style="text-decoration: none;">Imagen de /Index
                     </a>
                   </li>
                   <li>
-                    <a href="https://static4.abc.es/media/bienestar/2020/04/29/salir-correr-2-mayo-3-kC3B--620x349@abc.jpg"
+                    <a href="https://www.abc.es/bienestar/fitness/abci-como-volver-correr-tras-50-dias-sin-practicar-running-aire-libre-202004291530_noticia.html"
                       target="blank"
                       class="card-link"
                       style="text-decoration: none;">Imagen de /Home
