--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Start</title>
+    <title>Index</title>
 </head>
     <body class="bg-success p-2 text-dark bg-opacity-10">
       <header class="p-2 bg-white text-black shadow-lg rounded ">
