Probando LifeValidators propios

--- a/src/app/components/login-card/login-card.component.html
+++ b/src/app/components/login-card/login-card.component.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheets" href="../../../../node_modules/bootstrap/dist/css/bootstrap.min.css">
 
-  <title>Login Form</title>
+  <title>Login</title>
 </head>
 <body>
   <div class="d-flex row g-2 p-3 mt-lg-12 shadow-lg bg-body rounded">
@@ -77,5 +77,3 @@
 </body>
 </html>
 
-<!--  -->
-<!--https://es.calcuworld.com/deporte-y-ejercicio/calculadora-de-tiempos-carreras/-->
