--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,14 +12,7 @@
     <header class="p-4 bg-white text-black shadow-lg rounded ">
       <div class="container col-md-12">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-          <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-            <svg class="bi me-2"
-                width="40"
-                height="32"
-                role="img"
-                aria-label="Bootstrap"><use xlink:href="#bootstrap"/>
-            </svg>
-          </a>
+
           <div class="col-lg-3 me-lg-auto text-primary">
             <h1><em><strong>RUNNERS</strong></em></h1>
           </div>
@@ -30,7 +23,8 @@
                     <label class="form-label dropdown-toggle"
                           type="button"
                           id="dropdownMenuButton1"
-                          data-bs-toggle="dropdown">
+                          data-bs-toggle="dropdown"
+                          aria-expanded="true">
                       Características
                     </label>
                     <ul class="dropdown-menu dropdown-menu-start"
